--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,7 +8,7 @@ build:
     post_install:
       - pip install poetry
       - poetry config virtualenvs.create false
-      - poetry install --only docs
+      - poetry install --only docs --sync
 
 sphinx:
   configuration: docs/conf.py
