--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,11 @@ mypy = {version="*", python=">=3.8"}
 ruff = {version="*", python=">=3.8"} 
 coverage = "^7.4.3"
 
-[tool.poetry.group.docs]
+[tool.poetry.group.rtd]
 optional = true
+
+[tool.poetry.group.rtd.dependencies]
+furo = "*"
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "*"
