--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      # This permission is required for trusted publishing.
+      id-token: write
+      contents: read
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -18,9 +23,10 @@ jobs:
     - name: Install PIP
       run: |
         python -m pip install --upgrade pip
-    - name: Install dependencies
-      run: |
-        sh scripts/install.sh
+    - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: false
     - name: Assert Version Correctness
       run: |
         TOML_VER=$(poetry version | awk -F' ' '{ print $2 }')
@@ -31,12 +37,20 @@ jobs:
         echo lib "$LIB_VER"
         [[ "$TOML_VER" == "$GIT_VER" ]]
         [[ "$TOML_VER" == "$LIB_VER" ]]
-    - name: Publish
-      env:
-        PYPI_USERNAME: ${{ secrets.pypi_user }}
-        PYPI_PASSWORD: ${{ secrets.pypi_password }}
+        
+    - name: build
+        run: |
+          poetry build
+
+    - name: Mint token
+      id: mint
+      uses: tschm/token-mint-action@v1.0.3
+
+    - name: Publish the package with poetry
       run: |
-        poetry publish -u "$PYPI_USERNAME" -p "$PYPI_PASSWORD" --build
+        poetry publish -u __token__ -p '${{ steps.mint.outputs.api-token }}'
+
+
     - name: Upload Binaries as Artifacts
       uses: actions/upload-artifact@v2
       with:
