--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       # This permission is required for trusted publishing.
       id-token: write
-      contents: read
+      contents: read|write
 
     steps:
     - uses: actions/checkout@v2
@@ -52,7 +52,7 @@ jobs:
 
 
     - name: Upload Binaries as Artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: binaries
         path: dist
