--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       # This permission is required for trusted publishing.
       id-token: write
-      contents: read|write
+      contents: write
 
     steps:
     - uses: actions/checkout@v2
